cmake_minimum_required(VERSION 3.25)
project(Data_Algo1)

set(CMAKE_CXX_STANDARD 17)

add_executable(Data_Algo1 "Sorting algorithm/Selection sort.cpp" "Sorting algorithm/Insertion sort.cpp" "Sorting algorithm/Bubble sort.cpp" "Sorting algorithm/Merge sort.cpp" "Sorting algorithm/Quicksort.cpp" "Divide and Conquer/Maximum Subarray.cpp" "Pointers & Linked Lists/Basic pointers 1.cpp" "Stacks, Queues, Trees/Next Larger.cpp" "Stacks, Queues, Trees/Postfix Notation.cpp" "Breadth-first Search/Breadth-first Search.cpp" "Breadth-first Search/Shortest Path (unweighted).cpp")
